# PR_ModeAgnostic

./: .gitignore  BUGS_TO_FIX.md  README.md  SLURM.md  config.yaml  main.py  pyproject.toml
Benchmarking/: README.md  eval_counter.py  metrics.py  results.csv  runner.py  timeout.py
Benchmarking/backends/: __init__.py  _fasttreeshap_runner.py  base_backend.py  captum_backend.py  dalex_backend.py  fasttreeshap_backend.py  gputreeshap_backend.py  lightshap_backend.py  shap_backend.py  shap_nn_backend.py  shapiq_backend.py  shapiq_git_main_backend.py  shapr_backend.py  tree_shap_backend.py  tree_shapiq_backend.py  woodelf_backend.py
Datasets/: dataset.md  load_datasets.py
Libraries/: alibi.ipynb  captum.ipynb  dalex.ipynb  fastshap.ipynb  library_merge.ipynb  library_merge_nn.ipynb  lightshap.ipynb  pydvl.ipynb  sage.ipynb  shap.ipynb  shapiq.ipynb  shapleyflow.ipynb  shapleyflow_with.ipynb  shapr.ipynb  tree_library_merge.ipynb
Models/: architectures.py  config_parser.py  dataset_and_models.py  load_and_train.py  trainers.py
Research/shapash/: research.md
backends/: __init__.py  base_backend.py
benchmarking/: README.md  config.py  eval_counter.py  runner.py
benchmarking/backends/: __init__.py
configs/: config-accuracy.yaml  config-dimensionality-extreme.yaml  config-dimensionality.yaml  config-neural-networks-RQ3-cpu.yaml  config-neural-networks-RQ3.yaml  config-nn.yaml  config-test-nn-RQ3.yaml  config-test.yaml  config-tree-fasttreeshap.yaml  config-tree-gpu.yaml  config-tree.yaml  config.yaml
configs/RQ1-accuracy/: config-accuracy.yaml
configs/RQ2-dimensionality/: config-dimensionality-extreme.yaml  config-dimensionality.yaml
configs/RQ3-neural-networks/: config-neural-networks-RQ3-cpu.yaml  config-neural-networks-RQ3-gpu.yaml  config-neural-networks-RQ3.yaml  config-neural-networks-captum-shap-fix-cpu.yaml  config-neural-networks-captum-shap-fix-gpu.yaml  config-neural-networks-cpu.yaml  config-neural-networks-gpu.yaml  config-test-nn-RQ3.yaml
configs/RQ4-tree/: config-tree-fasttreeshap.yaml  config-tree.yaml
datasets/: README.md  load_datasets.py
models/: dataset_and_models.py  model.py  trainers.py
scripts/: cache_datasets.py  check_dataset_cache.py  fasttreeshap_requirements.txt  merge_fasttreeshap_repair.py  recompute_pairwise_metrics.py  setup_fasttreeshap_env.sh
slurm/: bench_array.sh  bench_array_gpu.sh  bench_array_nn.sh  bench_array_nn_cpu.sh  count_tasks.py  count_tasks_nn.py  merge.sh  merge_results.py  run_benchmark.py  run_benchmark_nn.py  select_array_script.sh  single_task.sh  submit.sh  submit_all.py  task_grid.py
tests/: test_actual_max_depth.py  test_backends.py  test_metrics.py  test_runner.py  test_value_conventions.py
(+60 files in other folders)
