[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["Models", "Datasets"]

[project]
name = "pr-modeagnostic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "captum>=0.9.0",
    "click>=8.4.1",
    "graphviz>=0.21",
    "pandas>=3.0.3",
    "lightgbm>=4.6.0",
    "lightshap>=0.1.12",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
    "shapiq>=1.4.1",
    "shapflow>=0.0.1",
    "torch>=2.12.0",
    "woodelf-explainer>=0.4.3",
    "xgboost>=2.0.0",
    "dalex>=1.7.2",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
