[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["Models", "Datasets"]

[project]
name = "pr-modeagnostic"
version = "0.1.0"
description = "Model-agnostic Shapley value XAI benchmark"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "captum>=0.9.0",
    "click>=8.4.1",
    "graphviz>=0.21",
    "pandas>=3.0.3",
    "lightgbm>=4.6.0",
    "lightshap>=0.1.12",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
    "shapiq>=1.5.0",
    "shapflow>=0.0.1",
    "torch>=2.12.0",
    "woodelf-explainer>=0.4.3",
    # woodelf's GPU=True path needs cupy; Linux-only marker so the macOS dev
    # env skips it (no CUDA wheels for darwin) while the cluster gets it via
    # plain `uv sync`. Wheel bundles the CUDA 12 runtime; needs driver >= 525.
    "cupy-cuda12x>=13.0 ; sys_platform == 'linux'",
    "xgboost>=2.0.0",
    "dalex>=1.7.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0",
]
